[package]
name = "morax"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of RustCrypto's SHA-1 and Sam Rijs's crc32fast, Rust implementations of SHA-1 hash and CRC32 (IEEE) checksum."
repository = "https://github.com/hazae41/morax-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false, features = ["std"] }
sha1 = { version = "0.10.5", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
crc32fast = { version = "1.3.2", default-features = false }
